--- a/src/public/css/stylesCart.css
+++ b/src/public/css/stylesCart.css
@@ -1,11 +1,11 @@
 * {
-  margin: 0px 0px;
   font-family: "Roboto", sans-serif;
   box-sizing: border-box;
 }
 
 body {
-  width: 100vw;
+  margin: 0;
+  background-color: rgb(248, 248, 248);
 }
 
 .navbar {
@@ -34,11 +34,25 @@ body {
   border-radius: 15px;
   height: 150px;
   width: 80%;
-  margin: 0 auto;
+  margin: 10px auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
+  background-color: white;
+}
+
+.img {
+  width: 97px;
+  height: 90%;
+  /*border: 1px solid black;*/
+  border-radius: 10px;
+  box-sizing: border-box;
+}
+
+.info {
+  text-align: center;
+  margin: 15px 8px 15px 8px;
 }
 
 .album {
@@ -50,20 +64,24 @@ body {
   align-items: center;
 }
 
-.img {
-  width: 97px;
-  height: 90%;
-  border: 1px solid black;
-  border-radius: 10px;
-  box-sizing: border-box;
-}
-.info {
-  margin: 15px;
-  text-align: center;
-}
 .datos {
   margin-bottom: 10px;
 }
+
+h2.datos {
+  font-size: 15px;
+}
+
+h2#empty {
+  display: block;
+  color: black;
+  font-size: 18px;
+  max-width: 80%;
+  font-weight: 300;
+  text-align: center;
+  margin: 40px auto;
+}
+
 .cantidad {
   margin: 15px;
   text-align: center;
@@ -98,7 +116,9 @@ body {
   padding: 4% 0;
   display: flex;
   justify-content: space-around;
+  background-color: white;
 }
+
 .codigo input {
   text-align: center;
 }
@@ -114,10 +134,11 @@ body {
 .precio {
   border: 1px solid black;
   border-radius: 15px;
-  display: flex;
-  justify-content: space-around;
   margin: 0 auto;
   padding: 4% 0;
+  display: flex;
+  justify-content: space-around;
+  background-color: white;
 }
 
 input {
@@ -151,7 +172,7 @@ button {
 
 }
 
-@media (min-width:577px) {
+@media (min-width:576px) {
 
   .encabezado p{
     font-size: 30px;
@@ -171,12 +192,22 @@ button {
     width: 80%;
   }
 
+  .info {
+    text-align: center;
+    margin: 15px;
+  }
+
   .img {
     width: 106px;
     height: 100%;
     border: 1px solid black;
     border-radius: 10px;
     box-sizing: border-box;
+  }
+
+  h2#empty {
+    font-size: 20px;
+    max-width: 60%;
   }
 
   .cupon {
@@ -224,11 +255,22 @@ button {
   .contenido {
     width: 800px;
   }
+
+  h2#empty {
+    font-size: 22px;
+    max-width: 70%;
+  }
   
   .prueba .cupon, .prueba .subtotal {
     width: 400px;
     margin: 50px 75px
   }
+
+  .img {
+    width: 100%;
+    height: 100%;
+  }
+
 }
 
 /* @media (min-width:1100px) {
