--- a/src/public/css/stylesRegister.css
+++ b/src/public/css/stylesRegister.css
@@ -72,6 +72,13 @@ input {
     border-radius: 20px;
 }
 
+input#image {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 0;
+}
+
 @font-face {
     font-family: "fontello";
     src: url('../font/fontello.eot');
@@ -86,7 +93,7 @@ input {
   
   }
   #password,
-  #rewrite-password {
+  #rewrited-password {
       font-family: "fontello";
       font-style: normal;
       font-weight: normal;
@@ -125,6 +132,21 @@ p {
     width: 90%;
     margin: 30px auto;
     text-align: center;
+}
+
+p#password-rule {
+    display: inline;
+    font-size: 12px;
+    padding: 0;
+    margin: 0 0 0 12px;
+    font-weight: 600;
+}
+
+p#error {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    color:rgb(209, 50, 50)
 }
 
 @media (min-width: 576px){
