--- a/src/src/views/main/productCart.ejs
+++ b/src/src/views/main/productCart.ejs
@@ -6,35 +6,42 @@
         <img src="/icons/carrito-de-compras.svg" width="22px" height="22px" />
         <p>Carrito</p>
       </div>
-      <div class="contenido">
-        <div class="album info">
-          <a href="/productos/1"><img class="img" src="images/greenvelvet.jpg" alt="" /></a>
+      <% if(locals && locals.addedProducts) { %>
+        <% addedProducts.forEach( addedProduct => { %>
+        <div class="contenido">
+          <div class="album info">
+            <a href="/productos/<%= addedProduct.id %>"><img class="img" src="/images/registeredProducts/<%= addedProduct.image %>" alt="Imagen del producto Añadido, <%= addedProduct.name + ' de ' + addedProduct.artist %>"/></a>
+          </div>
+          <div class="info">
+            <h2 class="datos"><%= addedProduct.name  %></h2>
+            <p class="datos"><%= addedProduct.artist %></p>
+            <p class="datos"><strong>$<%= addedProduct.price %></strong></p>
+          </div>
+          <div class="cantidad">
+            <label for="cantidad-discos">Cantidad</label>
+            <select name="cantidad-discos" id="cantidad-discos">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+              <option value="10">10</option>
+            </select>
+            <br />
+            <i class="far fa-trash-alt eliminar"></i>
+          </div>
         </div>
-        <div class="info">
-          <h2 class="datos">Titulo</h2>
-          <p class="datos">artista</p>
-          <p class="datos"><strong>$12.34</strong></p>
-        </div>
-        <div class="cantidad">
-          <label for="cantidad-discos">cantidad</label>
-          <select name="cantidad-discos" id="cantidad-discos">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-          </select>
-          <br />
-          <!-- <img class="eliminar" src="/icons/eliminar.svg" alt="" /> -->
-          <i class="far fa-trash-alt eliminar"></i>
-        </div>
-      </div>
+        <% }) %>
+      <% } else { %>
+        <h2 id="empty">Ningun producto ha sido añadido todavía.</h2>
+      <% } %>
       <div class="prueba">
+
+        <% if(locals && locals.addedProducts) { %>
         <div class="cupon">
           <h2>Cupón</h2>
           <br />
@@ -43,15 +50,26 @@
             <button>Aplicar</button>
           </div>
         </div>
+        <% } %>
+
         <div class="subtotal">
           <h2>Subtotal</h2>
           <br />
           <div class="precio">
-            <p><strong>$12.34</strong></p>
-            <button>Pagar</button>
+            <% if(locals && locals.totalPrice) { %>
+              <p><strong>$<%= totalPrice %></strong></p>
+              <button>Pagar</button>
+            <% } else { %>
+              <p><strong>$0.00</strong></p>
+              <form action="/productos" method="GET">
+                <button type="submit">Comprar</button>
+              </form>
+            <% } %>
           </div>
         </div>
+
       </div>
+
     </div>
     <%- include('../partials/footer') %>
   </body>
