--- a/src/public/css/stylesRegister.css
+++ b/src/public/css/stylesRegister.css
@@ -37,7 +37,7 @@ h1 {
     background-position: center bottom;
     display: block;
     width: 100%;
-    height: 1050px;
+    height: 1500px;
 }
 
 #register {
@@ -46,7 +46,7 @@ h1 {
     justify-content: space-evenly;
     margin: auto;
     width: 90%;
-    height: 600px;
+    height: 1050px;
     border: 1px gray solid;
     border-radius: 10px;
 }
@@ -149,6 +149,21 @@ p#error {
     color:rgb(209, 50, 50)
 }
 
+input#zip {
+    width: 100px;
+}
+
+input#birthday {
+    max-width: 140px;
+}
+
+select#country {
+    width: 120px;
+    margin: 0 0 0 10%;
+}
+
+
+
 @media (min-width: 576px){
     
     body {
@@ -166,7 +181,7 @@ p#error {
         background-image: none;
         display: block;
         width: 100%;
-        height: 850px;
+        height: 1300px;
     }
 
     p {
@@ -177,11 +192,11 @@ p#error {
 
 @media (min-width: 1500px){
 
-    body {
+    /* body {
         background-image: url("/images/vinyl-register-left.jpeg");
         background-size: contain;
         background-repeat: no-repeat;
-    }
+    } */
 
     .album-home p {
         padding: 0 13px 20px 13px;
