--- a/src/public/css/stylesCreateProduct.css
+++ b/src/public/css/stylesCreateProduct.css
@@ -63,6 +63,24 @@ h1 {
     margin-top: 2px;
 }
 
+#type-selector{
+    margin-bottom: auto;
+}
+
+#songs-album {
+    width: 290px;
+    margin: 0 0 0 18px;
+}
+
+#type-album{
+    margin: auto 5px;
+    display: inline;
+}
+
+#vinyl-type {
+    margin: 30px 0;
+}
+
 #color-selector{
     width: 450px;
     display: block;
@@ -70,6 +88,16 @@ h1 {
 }
 
 #color-album{
+    margin: 0 auto 10px;
+}
+
+#record-selector{
+    width: 450px;
+    display: block;
+    margin-bottom: 20px;
+}
+
+#record-album{
     margin: auto;
 }
 
@@ -158,6 +186,11 @@ div#in-case-of-errors {
     align-content: center;
 }
 
+#pieces {
+    width: 60px;
+    max-width: 60px;
+}
+
 @media (min-width: 576px){
     .product-register{
         max-width: 450px;
@@ -167,15 +200,13 @@ div#in-case-of-errors {
 @media (min-width: 1200px) {
 
     .container {
-        height: 85vh;
-        max-height: 650px;
+        height: 800px;
     }
 
     .product-register{
-        width: 80%;
-        max-width: 760px;
-        height: 94%;
-        max-height: 650px;
+        width: 85%;
+        max-width: 800px;
+        height: 750px;
     }
 
     .division {
@@ -205,6 +236,22 @@ div#in-case-of-errors {
 
     label#color-selector {
         width: 250px;
+    }
+
+    select#color-album select#record-album {
+        width: 80px;
+    }
+
+    div.info.three {
+        width: 245px;
+    }
+
+    div#info-pieces {
+        height: 30px;
+    }
+
+    #songs-album {
+        width: 340px;
     }
 
 }
