--- a/src/public/css/stylesDetail.css
+++ b/src/public/css/stylesDetail.css
@@ -8,6 +8,10 @@ body {
 
 }
 
+p {
+  font-size: 1rem;
+}
+
 .navbar {
   background-color: green;
   box-sizing: border-box;
@@ -325,6 +329,10 @@ button {
 
   .lista {
     margin: 60px 0;
+  }
+
+  p {
+    font-size: 1.2rem;
   }
 
 }
