--- a/src/src/views/products/editProduct.ejs
+++ b/src/src/views/products/editProduct.ejs
@@ -4,11 +4,24 @@
     <!-- <a class="central-logo" href="/"><img class="central-BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a>--> <!--<i class="fas fa-compact-disc"></i>-->  
     <h1>Modificar producto</h1>
     <section class="container">
-        <form action="/productos/<%= product.id %>?_method=PUT" class="product-edit" method="POST" enctype="multipart/form-data">
+        <form action="/productos/<%= product.vinyl_id %>?_method=PUT" class="product-edit" method="POST" enctype="multipart/form-data">
             <div class="division">
-                <div class="info">
-                    <label for="name">Nombre del Artista: </label>
-                    <input type="text" name="artist" id="name" value="<%= locals && locals.writtenValues ? writtenValues.artist : locals && locals.product ? product.artist : '' %>" required>
+                <div class="info">                    
+                    <label for="name"><%= locals && locals.product.artists[1] ? 'Nombre de los Artistas :' : 'Nombre del Artista :' %></label>
+                    <select name="artists" id="type-album">
+                        <% if(locals && locals.artists) { %>
+                            <% artists.forEach( artist => { %>
+                        <option value="<%= artist.artist_id %>" <%= locals && locals.writtenValues && ( writtenValues.artists == artist.artist_id ) ? 'selected' : locals && locals.product && product.artists[0].artist_id == artist.artist_id ? 'selected' : '' %> ><%= artist.fullName %></option>
+                            <%  }) %>
+                        <% } %>
+                    </select>
+                    <!-- <% if(locals && locals.product.artists[1]) { %>
+                        <%  for(let i = 0; i < product.artists.length; i++) { %>    
+                            <input type="text" name="artist<%= i %>" id="name" value="<%= locals && locals.writtenValues ? writtenValues.artist[i] : locals && locals.product ? product.artists[i].fullName : '' %>" required>
+                        <% } %>
+                    <% } else { %>
+                        <input type="text" name="artist" id="name" value="<%= locals && locals.writtenValues ? writtenValues.artist : locals && locals.product ? product.artists[0].fullName : '' %>" required>
+                    <% } %> -->
                 </div>
                 <div class="info">
                     <label for="album">Nombre del Album: </label>
@@ -16,9 +29,15 @@
                 </div>
             </div>
             <div class="division">
-                <div class="info">
-                    <label for="genre">Genero: </label>
-                    <input type="text" name="genre" id="genre" value="<%= locals && locals.writtenValues ? writtenValues.genre : locals && locals.product ? product.genre : '' %>" required>
+                <div class="info" id="vinyl-type">
+                    <label for="type" id="type-selector">Tipo : </label>
+                    <select name="type" id="type-album">
+                        <% if(locals && locals.types) { %>
+                            <% types.forEach( type => { %>
+                        <option id="types" value="<%= type.type_id %>" <%= locals && locals.writtenValues && ( writtenValues.type == type.type_id ) ? 'selected' : locals && locals.product && ( product.type_id_1 == type.type_id ) ? 'selected' : '' %>>RPM : <%= type.RPM %>     Diametro : <%= type.diameter %></option>
+                            <%  }) %>
+                        <% } %>
+                    </select>
                 </div>
                 <div class="info">
                     <label for="year">Año de lanzamiento: </label>
@@ -36,35 +55,63 @@
                     <textarea name="description" id="description" cols="40" rows="5" required><%= locals && locals.writtenValues ? writtenValues.description : locals && locals.product ? product.description : '' %></textarea>
                 </div>
             </div>
-            <div class="division">
-                <div class="info">
+            <div class="division" id="three">
+                <div class="info three">
                     <label for="image">Imagen Actual: </label>
-                    <img id="<%= product.IDImage %>" src="/images/registeredProducts/<%= product.image %>" width="40%">
+                    <img id="standardImage" src="/images/registeredProducts/<%= product.image %>" width="40%">
                     <input type="file" name="image" id="image">
                 </div>
-                <div class="info">
+                <div class="info three">
                     <label for="color" id="color-selector">Color predominante del album : </label>
                     <select name="color" id="color-album">
                     <% if(locals && locals.availableColors) { %>
                         <% availableColors.forEach( colour => { %>
-                    <option value="<%= colour.color %>" <%= locals && locals.writtenValues && ( writtenValues.color == colour.color ) ? 'selected' : locals && locals.product && ( product.IDContainer == colour.color ) ? 'selected' : '' %> ><%= colour.name %></option>
+                    <option value="<%= colour.color_id %>" <%= locals && locals.writtenValues && ( writtenValues.color == colour.value ) ? 'selected' : locals && locals.product && ( product.color_id_1 == colour.color_id ) ? 'selected' : '' %>><%= colour.name %></option>
                         <% }) %>
                     <% } %>
+                    </select>
+                </div>
+                <div class="info three">
+                    <label for="recordLabel" id="record-selector">Sello discográfico del album :</label>
+                    <select name="recordLabel" id="record-album" required>
+                        <% if(locals && locals.recordLabels) { %>
+                            <% recordLabels.forEach( recordLabel => { %>
+                        <option value="<%= recordLabel.recordLabel_id %>" <%= locals && locals.writtenValues && ( writtenValues.recordLabel == recordLabel.recordLabel_id ) ? 'selected' : locals && locals.product && ( product.recordLabel_id_1 == recordLabel.recordLabel_id ) ? 'selected' : '' %> ><%= recordLabel.name %></option>
+                            <% }) %>
+                        <% } %>
                     </select>
                 </div>
             </div>
             <div class="division" id="all-songs">
                 <div class="info">
-                    <label>Canciones:</label>
-                    <% for(let i = 0; i < product.songs.length; i++) { %>
+                    <label>Canciones :</label>
+                    <div class="songs">
+                        <label for="songs">Selecciona el titulo :</label>
+                        <select name="songs" id="songs-album">
+                            <% if(locals && locals.songs) { %>
+                                <% songs.forEach( song => { %>
+                            <option value="<%= song.song_id %>" <%= locals && locals.writtenValues && ( writtenValues.songs == song.song_id ) ? 'selected' : locals && locals.product && ( song.song_id == product.songs[0].song_id ) ? 'selected' : '' %>><%= song.name %> de <%= song.artistsSongs[0].fullName %></option>
+                                <%  }) %>
+                            <% } %>
+                        </select>
+                        <!-- <input type="text" name="song" id="songs" value="<%= locals && locals.writtenValues ? writtenValues.song : '' %>" placeholder="Escribelos separados por comas, si no estan..." required>
+                         <label for="lenght">Duracion de la canción:</label>
+                        <input type="text" name="lenght" id="lenght" value="<%= locals && locals.writtenValues ? writtenValues.lenght : '00:00' %>" required> -->
+    
+                    </div>
+                    <!-- <% for(let i = 0; i < product.songs.length; i++) { %>
                     <div class="songs">
                         <br>
                         <label for="songs">Titulo de canción <%= i + 1 %>: </label>
-                        <input type="text" name="song<%= i + 1 %>" id="songs" value="<%= locals && locals.writtenValues ? writtenValues.song1 : product.songs[i].title %>">
+                        <input type="text" name="song<%= i + 1 %>" id="songs" value="<%= locals && locals.writtenValues ? writtenValues.song1 : product.songs[i].name %>">
                         <label for="lenght">Duración: </label>
-                        <input type="text" name="lenght<%= i + 1 %>" id="lenght" value="<%= locals && locals.writtenValues ? writtenValues.lenght1 : locals && locals.product ? product.songs[i].lenght : '' %>">
+                        <input type="text" name="lenght<%= i + 1 %>" id="lenght" value="<%= locals && locals.writtenValues ? writtenValues.lenght1 : locals && locals.product ? product.songs[i].lengthInMinutes : '' %>">
                     </div>
-                    <% } %>
+                    <% } %> -->
+                </div>
+                <div class="info" id="info-pieces">
+                    <label for="pieces">Piezas: </label>
+                    <input type="number" step="0.01" name="pieces" id="pieces" value="<%= locals && locals.writtenValues ? writtenValues.pieces : locals && locals.product ? product.pieces : '' %>" required>
                 </div>
                 <div id="in-case-of-errors">
                     <% if(locals && locals.errors) { %>
@@ -76,7 +123,7 @@
             </div>
             <button type="submit" id="submit-product">Modificar</button>
         </form>
-        <form action="/productos/<%= product.id %>?_method=DELETE" method="POST" class="product-delete">
+        <form action="/productos/<%= product.vinyl_id %>?_method=DELETE" method="POST" class="product-delete">
             <button type="submit" id="delete-product">Eliminar</button>
         </form>
     </section>
