--- a/src/src/views/products/index.ejs
+++ b/src/src/views/products/index.ejs
@@ -11,11 +11,11 @@
     <% } %>
     <section class="album-section">
         <% for(let i = 0; i < products.length; i++) { %>
-        <article class="album-home" id="<%= products[i].IDContainer %>">
-            <img id="<%= products[i].IDImage %>" src="/images/registeredProducts/<%= products[i].image %>" alt="Imágen de Album">
+        <article class="album-home" id="<%= products[i].colors.value %>">
+            <img id="standardImage" src="/images/registeredProducts/<%= products[i].image %>" alt="Imágen de Album">
             <h2><%= products[i].title %></h2>
             <p><%= products[i].description %></p>
-            <a href="/productos/<%= products[i].id %>"><%= products[i].finalMessage %></a>
+            <a href="/productos/<%= products[i].vinyl_id %>"><%= products[i].distinctiveMessage %></a>
         </article>
         <% } %>
     </section>
