--- a/src/src/views/partials/header.ejs
+++ b/src/src/views/partials/header.ejs
@@ -1,8 +1,9 @@
 <header class="main-header">
     <a class="hamburguer-button" href="#"><i class="fas fa-bars"></i></a>
     <a class="logo" href="/"><img class="BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a> <!--<i class="fas fa-compact-disc"></i>-->
-    <input type="text" class="seeker">
-    <a class="search" href="#"><i class="fas fa-search"></i></a>
+    <form action="/productos/busqueda" method="GET">
+        <input type="text" name="search" class="seeker">
+        <button type="submit" class="search"><i class="fas fa-search"></i></button></form>
     <a href="/usuario/inicio-de-sesion" class="user"><i class="far fa-user"></i></a>
     <a class="cart" href="/carrito-de-compras"><i class="fas fa-shopping-cart"></i></a>
 </header>
