--- a/src/public/css/stylesUser.css
+++ b/src/public/css/stylesUser.css
@@ -125,6 +125,14 @@ p#error {
     color:rgb(209, 50, 50)
 }
 
+h4#edited {
+    font-size: 14px;
+    text-transform: uppercase;
+    padding: 0 0 25px 15px;
+    font-weight: 300;
+    color: rgb(32, 54, 223)
+}
+
 @media (min-width: 768px) {
 
     img#img-before768 {
