--- a/src/public/css/stylesDetail.css
+++ b/src/public/css/stylesDetail.css
@@ -8,6 +8,10 @@ body {
 
 }
 
+p {
+  font-size: 1rem;
+}
+
 .navbar {
   background-color: green;
   box-sizing: border-box;
@@ -189,18 +193,6 @@ h2 .banner-artistName a{
   text-align: center;
   width: 30%;
   margin: 0 auto 40px;
-
-}
-
-.editar button{
-  border-radius: 20px;
-  background-color: #4b51ed;
-  width: 110px;
-}
-
-.editar button:hover{
-  background-color: #15199d;
-  /* color: white; */
 }
 
 .editar button a {
@@ -208,14 +200,26 @@ h2 .banner-artistName a{
   color:rgb(223, 223, 223);
 }
 
+.editar button{
+  border-radius: 20px;
+  background-color: #4b51ed;
+  width: 110px;
+  height: 34px;
+}
 
-button {
+.editar button:hover{
+  background-color: #15199d;
+  /* color: white; */
+}
+
+
+/* button {
   width: 80%;
   height: 100%;
   font-size: 16px;
   border-radius: 10px;
   background-color: lightgray;
-}
+} */
 
 .lista {
   margin: 30px 0;
@@ -325,6 +329,10 @@ button {
 
   .lista {
     margin: 60px 0;
+  }
+
+  p {
+    font-size: 1.2rem;
   }
 
 }
