--- a/src/src/views/users/profile.ejs
+++ b/src/src/views/users/profile.ejs
@@ -11,12 +11,90 @@
             <img id="img-after768" src="/images/registeredUsers/<%= user.image %>">
         </div>
         <h1>Detalles de la Cuenta :</h1>
-        <div><h3 class="field">Número de cliente :</h3><h3 class="info"><%= user.id %></h3></div>
-        <div><h3 class="field">Nombre completo : </h3><h3 class="info"><%= user.firstName + " " + user.lastName %></h3></div>
+        <h4 id="edited"><%= locals && locals.edited ? 'Cambios guardados exitosamente.' : '' %></h4>
+        <div><h3 class="field">Número de cliente :</h3><h3 class="info"><%= user.user_id %></h3></div>
+            <% if(!locals.editing) { %>
+                <div><h3 class="field">Nombre(s) : </h3>
+                <h3 class="info"><%= user.firstName%></h3></div>
+            <% } else { %>
+                <form action="/usuario/perfil/editado" method="POST" enctype="multipart/form-data">
+                <div><h3 class="field">Nombre(s) : </h3>
+                <input type="text" name="firstName" value="<%= user.firstName %>">
+            <% } %>
+        <div><h3 class="field">Apellidos : </h3>
+            <% if(!locals.editing) { %>
+                <h3 class="info"><%= user.lastName%></h3></div>
+            <% } else { %>
+                <input type="text" name="lastName" value="<%= user.lastName %>">
+            <% } %>
         <div><h3 class="field">Correo electrónico :</h3><h3 class="info"><%= user.email %></h3></div>
-        <div><h3 class="field">Contraseña :</h3><h3 class="info">**** <a href="#">Cambiar contraseña</a></h3></div>
-        <br><div><h3 class="field"><a id="products" href="/productos/crear">-> Vender Vinyl.</h3></a></div>
-        <br><div><h3 class="field"><a id="products" href="#">-> Mis productos registrados.</h3></a></div>
+        <div><h3 class="field">Contraseña :</h3>
+            <% if(!locals.editing) { %>
+                <h3 class="info">**** </h3></div>
+            <% } else { %>
+                <input type="password" name="password" value="" placeholder="Escribe una nueva...">
+                <br><div><h3 class="field">Reescribe la contraseña :</h3>
+                <input type="password" name="rewrited-password" id="rewrited-password" placeholder="Reescribe la contraseña.">
+            <% } %>
+        <div><h3 class="field">Fecha de nacimiento :</h3>
+            <% if(!locals.editing) { %>
+                <h3 class="info"><%= user.birthday %></h3></div>
+            <% } else { %>
+                <input type="date" name="birthday" value="<%= user.birthday %>">
+            <% } %>
+        <div><h3 class="field">Dirección :</h3>
+            <% if(!locals.editing) { %>
+                <h3 class="info"><%= user.address %></h3></div>
+            <% } else { %>
+                <input type="text" name="address" value="<%= user.address %>">
+            <% } %>
+        <div><h3 class="field">CP :</h3>
+            <% if(!locals.editing) { %>
+                <h3 class="info"><%= user.zip %></h3></div>
+            <% } else { %>
+                <input type="text" name="zip" value="<%= user.zip %>">
+            <% } %>
+        <div><h3 class="field">Ciudad :</h3>
+            <% if(!locals.editing) { %>
+                <h3 class="info"><%= user.city %></h3></div>
+            <% } else { %>
+                <input type="text" name="city" value="<%= user.city %>">
+            <% } %>
+        <div><h3 class="field">Estado :</h3>
+            <% if(!locals.editing) { %>
+                <h3 class="info"><%= user.state_1 %></h3></div>
+            <% } else { %>
+                <input type="text" name="state" value="<%= user.state_1 %>">
+            <% } %>
+        <div><h3 class="field">País :</h3>
+            <% if(!locals.editing) { %>
+                <h3 class="info"><%= user.country_1 %></h3></div>
+            <% } else { %>
+                <select name="country" id="country" required>
+                    <% if(locals && locals.countries) { %>
+                        <% countries.forEach( country => { %>
+                    <option value="<%= country.name %>" <%= country.name == user.country_1 ? 'selected' : '' %> ><%= country.name %></option>
+                        <%  }) %>
+                    <% } %>
+                </select>
+                <br><h3 class="field">Imagen nueva: </h3><input type="file" name="image" id="image" accept=".jpg, .png">
+                <% if(locals && locals.errors) { %>
+                    <% errors.forEach( error => { %>
+                    <p id="error">*<%= error.msg %></p><br>
+                    <% }) %> 
+                    <% } %>
+                <div id="last-container">
+                    <button type="submit" id="submit-button">Guardar cambios</button>
+                    <a href="/usuario/perfil" id="canceling-changes">Cancelar cambios</a>
+                </div>
+                </form>
+            <% } %>
+        <% if(!locals.editing) { %>
+            <br><div><h3 class="field"><a id="products" href="/productos/crear">-> Vender Vinyl.</h3></a></div>
+            <br><div><h3 class="field"><a id="products" href="#">-> Mis productos registrados.</h3></a></div>
+            <br><div><h3 class="field"><a id="edit-profile" href="/usuario/perfil/editar"><- Editar perfil</h3></a></div> 
+        <% } else { %>
+        <% } %>
         <img id="img-before768" src="/images/registeredUsers/<%= user.image %>">
     </section>
     <%- include('../partials/footer') %>
